# meeting-notes-ai

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  rxconfig.py
meeting_notes/: meeting_notes.py
meeting_notes_ai/: media_handler.py
templates/: index.html  meeting_summary.html
